--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tweenjs/tween.js": "^18.6.4",
     "three": "^0.137.5",
     "vue": "^3.2.25",
     "vue-router": "4"
